--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,7 @@ main {
 #register {
   /* background-color: green; */
   display: flex;
-  width: 60%;
+  width: 90%;
   height: 50px;
   margin: 10px auto;
   backdrop-filter: blur(3px);
@@ -61,9 +61,24 @@ main {
 }
 
 #todo {
-  width: 70%;
+  width: 40%;
   overflow: hidden;
   font-size: 24px;
+  color: #ffffff;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  margin-bottom: 5px;
+  margin-left: 15px;
+  background-color: transparent;
+  border: none;
+  border-bottom: solid 3px #ffffff;
+}
+
+#comment {
+  width: 60%;
+  overflow: hidden;
+  font-size: 12px;
   color: #ffffff;
   /* display: flex;
   justify-content: center;
@@ -79,7 +94,6 @@ main {
   outline: none;
 }
 
-/* Todoè¡¨ç¤ºç®‡æ‰€ */
 #lists {
   margin-top: 30px;
   /* background-color: red; */
@@ -109,9 +123,20 @@ main {
 
 .todoTitle {
   /* background-color: blue; */
-  width: 70%;
+  width: 30%;
   overflow: hidden;
   font-size: 24px;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.comment {
+  width: 70%;
+  overflow: hidden;
+  font-size: 18px;
   color: #ffffff;
   display: flex;
   justify-content: center;
