--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,8 @@
-html {
-  /* background-color: #000000; */
-  background-image: url("./../img/bg.png");
-  background-size: cover;
-}
-
 body {
   font-family: sans-serif;
   margin: 0;
+  background: linear-gradient(45deg, #464646, #000000);
+  height: 100vh;
 }
 
 h1 {
@@ -80,9 +76,7 @@ main {
   overflow: hidden;
   font-size: 12px;
   color: #ffffff;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
+  resize: none;
   margin-bottom: 5px;
   margin-left: 15px;
   background-color: transparent;
@@ -91,6 +85,10 @@ main {
 }
 
 #todo:focus {
+  outline: none;
+}
+
+#comment:focus {
   outline: none;
 }
 
@@ -125,7 +123,7 @@ main {
   /* background-color: blue; */
   width: 30%;
   overflow: hidden;
-  font-size: 24px;
+  font-size: 16px;
   color: #ffffff;
   display: flex;
   justify-content: center;
@@ -136,7 +134,7 @@ main {
 .comment {
   width: 70%;
   overflow: hidden;
-  font-size: 18px;
+  font-size: 12px;
   color: #ffffff;
   display: flex;
   justify-content: center;
